--- a/.circleci/deploy-orb.yml
+++ b/.circleci/deploy-orb.yml
@@ -7,6 +7,21 @@ executors:
       Docker image with curl
     docker:
     - image: tutum/curl:alpine
+commands: # a reusable command with parameters
+  deploy:
+    parameters:
+      KALM_API_ADDRESS:
+        type: string
+      KALM_DEPLOY_KEY:
+        type: string
+      KALM_APP:
+        type: string
+      KALM_COMPONENT:
+        type: string
+      KALM_COMPONENT_IMG_TAG:
+        type: string
+    steps:
+    - run: curl -v -XPOST << parameters.KALM_API_ADDRESS >>/__kalm_webhook/deploy?deploy-key=<< parameters.KALM_DEPLOY_KEY >>\&app=<< parameters.KALM_APP >>\&component=<< parameters.KALM_COMPONENT >>\&image-tag=<< parameters.KALM_COMPONENT_IMG_TAG >>
 jobs:
   run:
     description: |
@@ -24,4 +39,9 @@ jobs:
       KALM_COMPONENT_IMG_TAG:
         type: string
     steps:
-    - run: curl -v -XPOST << parameters.KALM_API_ADDRESS >>/__kalm_webhook/deploy?deploy-key=<< parameters.KALM_DEPLOY_KEY >>\&app=<< parameters.KALM_APP >>\&component=<< parameters.KALM_COMPONENT >>\&image-tag=<< parameters.KALM_COMPONENT_IMG_TAG >>
+    - deploy:
+        KALM_API_ADDRESS: << parameters.KALM_API_ADDRESS >>
+        KALM_DEPLOY_KEY: << parameters.KALM_DEPLOY_KEY >>
+        KALM_APP: << parameters.KALM_APP >>
+        KALM_COMPONENT: << parameters.KALM_COMPONENT >>
+        KALM_COMPONENT_IMG_TAG: << parameters.KALM_COMPONENT_IMG_TAG >>
