disable branch filter

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,10 +1,10 @@
 name: Call Kalm Deploy Webhook
 
-on: 
-  push:
-    branches:
-      - master
-      - github-action
+on: [push]
+  # push:
+  #   branches:
+  #     - master
+  #     - github-action
 
 jobs:
   deploy_job:
