--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Use Deploy Action
-        uses: ./.github/actions # Uses an action in the directory
+        uses: kalmhq/kalm-deploy@v0.0.1 # Uses public kalm-deploy action
         with:
           KALM_API_ADDRESS: https://dashboard.kapp.live
           KALM_DEPLOY_KEY: ${{ secrets.KALM_DEPLOY_KEY }}
