--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,10 +1,10 @@
 name: Call Kalm Deploy Webhook
 
-on: [push]
-  # push:
-  #   branches:
-  #     - master
-  #     - github-action
+on:
+  push:
+    branches:
+      - master
+      - github-action
 
 jobs:
   deploy_job:
@@ -16,9 +16,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Use Deploy Action
-        uses: kalmhq/kalm-deploy@v0.0.1 # Uses public kalm-deploy action
+        uses: kalmhq/kalm-deploy@v0.0.2 # Uses public kalm-deploy action
         with:
-          KALM_API_ADDRESS: https://dashboard.kapp.live
+          KALM_API_ADDRESS: ${{ secrets.KALM_API_ADDRESS }}
           KALM_DEPLOY_KEY: ${{ secrets.KALM_DEPLOY_KEY }}
           KALM_APP: kalm-system
           KALM_COMPONENT: kalm
