name fields in deploy key

--- a/controller/config/crd/bases/core.kalm.dev_deploykeys.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_deploykeys.yaml
@@ -48,8 +48,8 @@ spec:
             scope:
               enum:
               - component
-              - app
-              - all
+              - namespace
+              - cluster
               type: string
           required:
           - scope
@@ -60,9 +60,6 @@ spec:
             lastUsedTimestamp:
               type: integer
             serviceAccountToken:
-              description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
-                of cluster Important: Run "make" to regenerate code after modifying
-                this file'
               type: string
             usedCount:
               type: integer
