format quantity in resp

--- a/controller/config/samples/core_v1alpha1_tutorial_1_hello-world.yaml
+++ b/controller/config/samples/core_v1alpha1_tutorial_1_hello-world.yaml
@@ -17,6 +17,8 @@ spec:
     - name: http
       containerPort: 8080
       servicePort: 80
+  cpu: "10m"
+  memory: "256Mi"
 ---
 apiVersion: core.kalm.dev/v1alpha1
 kind: HttpRoute
