--- a/.circleci/deploy-orb.yml
+++ b/.circleci/deploy-orb.yml
@@ -24,14 +24,14 @@ commands: # a reusable command with parameters
     - run: |
         cat \<<EOF > data.json
         {
-            "deployKey":     "${INPUT_KALM_DEPLOY_KEY}",
-            "application":   "${INPUT_KALM_APP}",
-            "componentName": "${INPUT_KALM_COMPONENT}",
-            "imageTag":      "${INPUT_KALM_COMPONENT_IMG_TAG}"
+            "deployKey":     "<< parameters.KALM_DEPLOY_KEY >>",
+            "application":   "<< parameters.KALM_APP >>",
+            "componentName": "<< parameters.KALM_COMPONENT >>",
+            "imageTag":      "<< parameters.KALM_COMPONENT_IMG_TAG >>"
         }
         EOF
 
-        resp_code=$(curl -s -o resp.log -w "%{http_code}" -XPOST -H "Content-Type: application/json" -d "@data.json" ${INPUT_KALM_API_ADDRESS}/webhook/components)
+        resp_code=$(curl -s -o resp.log -w "%{http_code}" -XPOST -H "Content-Type: application/json" -d "@data.json" << parameters.INPUT_KALM_API_ADDRESS >>/webhook/components)
 
         rm data.json
 
