Extracted wording of all Empty States

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "eslint.workingDirectories": ["./frontend"]
+  "eslint.workingDirectories": [
+    "./frontend"
+  ],
+  "go.inferGopath": false
 }
