--- a/controller/config/samples/core_v1alpha1_kalm_dashboard.yaml
+++ b/controller/config/samples/core_v1alpha1_kalm_dashboard.yaml
@@ -52,7 +52,7 @@ spec:
   workloadType: server
   command: ./kalm-api-server
   ports:
-    - name: http
+    - protocol: http
       containerPort: 3001
       servicePort: 80
 ---
