--- a/controller/config/samples/core_v1alpha1_sts_kafka.yaml
+++ b/controller/config/samples/core_v1alpha1_sts_kafka.yaml
@@ -45,7 +45,7 @@ spec:
         size: 512Mi
         persistentVolumeClaimName: kakfa-data
     ports:
-      - name: kafka
+      - protocol: tcp
         containerPort: 9092
         servicePort: 9092
     livenessProbe:
