--- a/controller/config/samples/core_v1alpha1_tutorial_1_hello-world.yaml
+++ b/controller/config/samples/core_v1alpha1_tutorial_1_hello-world.yaml
@@ -14,7 +14,7 @@ metadata:
 spec:
   image: k8s.gcr.io/echoserver:1.10
   ports:
-    - name: http
+    - protocol: http
       containerPort: 8080
       servicePort: 80
 ---
