--- a/controller/config/samples/core_v1alpha1_vol_dp.yaml
+++ b/controller/config/samples/core_v1alpha1_vol_dp.yaml
@@ -14,7 +14,7 @@ metadata:
 spec:
   image: strm/helloworld-http:latest
   ports:
-    - name: http
+    - protocol: http
       containerPort: 80
       servicePort: 80
   volumes:
