--- a/controller/config/samples/core_v1alpha1_vol_sts.yaml
+++ b/controller/config/samples/core_v1alpha1_vol_sts.yaml
@@ -25,6 +25,6 @@ spec:
         size: 2Mi
         type: emptyDirMemory
     ports:
-        - name: http
+        - protocol: http
           containerPort: 80
           servicePort: 80
