--- a/controller/config/samples/core_v1alpha1_component_pre_injected_file.yaml
+++ b/controller/config/samples/core_v1alpha1_component_pre_injected_file.yaml
@@ -26,7 +26,7 @@ metadata:
 spec:
   image: nginx:alpine
   ports:
-    - name: http
+    - protocol: http
       containerPort: 80
       servicePort: 80
   preInjectedFiles:
