--- a/controller/config/samples/core_v1alpha1_kalm_http_route.yaml
+++ b/controller/config/samples/core_v1alpha1_kalm_http_route.yaml
@@ -40,7 +40,7 @@ metadata:
 spec:
   image: k8s.gcr.io/echoserver:1.10
   ports:
-    - name: http
+    - protocol: http
       containerPort: 8080
       servicePort: 80
 ---
@@ -52,7 +52,7 @@ metadata:
 spec:
   image: k8s.gcr.io/echoserver:1.10
   ports:
-    - name: http
+    - protocol: http
       containerPort: 8080
       servicePort: 80
 ---
