--- a/controller/config/samples/core_v1alpha1_tutorial_2_bookinfo.yaml
+++ b/controller/config/samples/core_v1alpha1_tutorial_2_bookinfo.yaml
@@ -31,7 +31,7 @@ spec:
     cpu: 50m
     memory: 64Mi
     ports:
-        - name: http
+        - protocol: http
           containerPort: 9080
           servicePort: 9080
 ---
@@ -51,7 +51,7 @@ spec:
     cpu: 50m
     memory: 64Mi
     ports:
-        - name: http
+        - protocol: http
           containerPort: 9080
           servicePort: 9080
 ---
@@ -71,7 +71,7 @@ spec:
     # cpu: 50m
     # memory: 128Mi
     ports:
-        - name: http
+        - protocol: http
           containerPort: 9080
           servicePort: 9080
     env:
@@ -98,7 +98,7 @@ spec:
     # cpu: 50m
     # memory: 64Mi
     ports:
-        - name: http
+        - protocol: http
           containerPort: 9080
           servicePort: 9080
     env:
@@ -125,7 +125,7 @@ spec:
     # cpu: 50m
     # memory: 64Mi
     ports:
-        - name: http
+        - protocol: http
           containerPort: 9080
           servicePort: 9080
     env:
@@ -156,7 +156,7 @@ spec:
     cpu: 50m
     memory: 64Mi
     ports:
-        - name: http
+        - protocol: http
           containerPort: 9080
           servicePort: 9080
     volumes:
