--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -11,24 +11,17 @@ defaults:
 # events but only for the master branch
 on:
   push:
-    branches: [ performance/lighthouse-ci ]
+    branches: [performance/lighthouse-ci]
   pull_request:
-    branches: [ performance/lighthouse-ci ]
+    branches: [performance/lighthouse-ci]
 jobs:
   lhci:
     name: Lighthouse
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 10.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 10.x
-      - name: npm install, build
-        run: |
-          npm install
-          npm run build
       - name: run Lighthouse CI
         run: |
           npm install -g @lhci/cli@0.4.x
-          lhci autorun
+          lhci collect --settings.chromeFlags="--headless" --settings.extraHeaders="{\"authorization\":\"Bearer ${{secrets.KALM_AUTH_HEADER}}\"}"
+          lhci assert
+          lhci upload
