update lighthouse ci: support desktop

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -32,5 +32,6 @@ jobs:
       - name: run Lighthouse CI
         run: |
           npm install -g @lhci/cli@0.4.x
-          lhci collect --settings.chromeFlags="--headless" --settings.extraHeaders="{\"authorization\":\"Bearer ${{secrets.KALM_AUTH_HEADER}}\"}"
+          lhci collect --settings.chromeFlags="--headless" --settings.extraHeaders="{\"authorization\":\"Bearer ${{secrets.KALM_AUTH_HEADER}}\"}" 
+          lhci collect --settings.extraHeaders="{\"authorization\":\"Bearer ${{secrets.KALM_AUTH_HEADER}}\"}" --settings.chromeFlags="--no-sandbox" --settings.emulatedFormFactor="desktop"
           lhci upload
