trigger operator update when do make manifests in controller

--- a/controller/Makefile
+++ b/controller/Makefile
@@ -52,6 +52,10 @@ deploy: manifests go-generate
 # Generate manifests e.g. CRD, RBAC etc.
 manifests: controller-gen
 	$(CONTROLLER_GEN) $(CRD_OPTIONS) rbac:roleName=controller webhook paths="./..." output:crd:artifacts:config=config/crd/bases
+	make -C ../operator go-generate
+
+manifests-for-operator: controller-gen
+	$(CONTROLLER_GEN) $(CRD_OPTIONS) rbac:roleName=controller webhook paths="./..." output:crd:artifacts:config=config/crd/bases
 
 # Run go fmt against code
 fmt:
