--- a/resources/kalm-install-plg.yaml
+++ b/resources/kalm-install-plg.yaml
@@ -1,5 +1,13 @@
 ---
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: loki
+spec:
+  finalizers:
+    - kubernetes
+---
+apiVersion: v1
 items:
   - apiVersion: rbac.authorization.k8s.io/v1
     kind: ClusterRole
