only run frontend pre-commit hook if the frontend src is dirty

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -117,7 +117,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && react-scripts test --watchAll=false"
+      "pre-commit": "./scripts/pre-commit.sh"
     }
   }
 }
