--- a/controller/config/webhook/manifests.yaml
+++ b/controller/config/webhook/manifests.yaml
@@ -91,6 +91,24 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
+      path: /validate-core-kalm-dev-v1alpha1-componentpluginbinding
+  failurePolicy: Fail
+  name: vcomponentpluginbinding.kb.io
+  rules:
+  - apiGroups:
+    - core.kalm.dev
+    apiVersions:
+    - v1alpha1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - componentpluginbindings
+- clientConfig:
+    caBundle: Cg==
+    service:
+      name: webhook-service
+      namespace: system
       path: /validate-core-kalm-dev-v1alpha1-component
   failurePolicy: Fail
   name: vcomponent.kb.io
@@ -194,6 +212,24 @@ webhooks:
     - UPDATE
     resources:
     - httpscertissuers
+- clientConfig:
+    caBundle: Cg==
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-core-v1alpha1-protectedendpoint
+  failurePolicy: Fail
+  name: vprotectedendpointtype.kb.io
+  rules:
+  - apiGroups:
+    - ""
+    apiVersions:
+    - v1alpha1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - protectedendpointtypes
 - clientConfig:
     caBundle: Cg==
     service:
