initial split mock server

--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -7,8 +7,14 @@ REACT_APP_K8S_API_PERFIX=http://localhost:3001
 # api version
 REACT_APP_K8S_API_VERSION=v1alpha1
 
-# use mock api backend for development and test
-REACT_APP_USE_MOCK_API=false
-
 # display some debug info/component; register debug middlewares/plugins
 REACT_APP_DEBUG=true
+
+
+# use mock api backend for development and test
+# please delete this line after split mock server
+REACT_APP_USE_MOCK_API=false
+
+# local mock server
+# REACT_APP_K8S_API_PERFIX=http://localhost:3004
+# REACT_APP_K8S_API_VERSION=v1alpha1
