--- a/controller/config/crd/bases/core.kalm.dev_componenttemplates.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_componenttemplates.yaml
@@ -63,6 +63,7 @@ spec:
                 properties:
                   name:
                     description: Name of the environment variable. Must be a C_IDENTIFIER.
+                    minLength: 2
                     type: string
                   prefix:
                     type: string
@@ -92,19 +93,35 @@ spec:
                 properties:
                   containerPort:
                     format: int32
+                    maximum: 65535
+                    minimum: 1
                     type: integer
                   protocol:
-                    enum:
-                    - http
-                    - http2
-                    - grpc
-                    - https
-                    - tcp
-                    - udp
+                    allOf:
+                    - enum:
+                      - http
+                      - https
+                      - http2
+                      - grpc
+                      - grpc-web
+                      - tcp
+                      - udp
+                      - unknown
+                    - enum:
+                      - http
+                      - https
+                      - http2
+                      - grpc
+                      - grpc-web
+                      - tcp
+                      - udp
+                      - unknown
                     type: string
                   servicePort:
                     description: port for service
                     format: int32
+                    maximum: 65535
+                    minimum: 1
                     type: integer
                 required:
                 - containerPort
